--- a/index.html
+++ b/index.html
@@ -6,19 +6,30 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>DATA SEANCE</title>
 		<link href="css/style.css" type="text/css" rel="stylesheet">
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
+		<script type="text/javascript" src="searcher.js"></script>
+		<script type="text/javascript">
+
+			$(document).ready(function () {
+				$('#form').submit(function (e) {
+					console.log('Submitted');
+					// keep the browser from reloading
+					e.preventDefault();
+				});
+			});
+		</script>
 	</head>
 	<body>
 		<div class="container">
 			<header class="header">
 				<h1>DATA SEANCE</h1>
 			</header>
-			<form class="form">
+			<form class="form" id="form" method="post" action="">
 				<input type="file" class="upload" name="file">
 				<input type="submit" class="submit">
-			</form>
-			<section class="result">
+			<output class="result">
 				Results appear here
-			</section>
+			</output>
 		</div>
 	</body>
 </html>
