CLOSE the form tag

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 			<form class="form" id="form" method="post" action="">
 				<input type="file" class="upload" id="file" name="file">
 				<input type="submit" class="submit">
+			</form>
 			<section id="result" class="result">
 				Results appear here
 			</section>
