add the mist elements

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 		</script>
 	</head>
 	<body>
+		<div class="mist mist1"></div>
+		<div class="mist mist2"></div>
+
 		<div class="container">
 			<header class="header">
 				<h1>DATA SEANCE</h1>
