--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
 		<div class="container">
 			<header class="header">
-				<h1>DATA SEANCE</h1>
+				<h1>WELCOME... TO THE DATACOMBS</h1>
 			</header>
 			<form class="form" id="form" method="post" action="">
 				<input type="file" class="upload" id="file" name="file">
