add more sentence types

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
 				"AUGURY" : ['adjectives', 'subjects', 'verbs', 'adjectives', 'objects'],
 				"PORTENT" : ['subjects', 'verbs', 'adjectives', 'objects', 'prepositions', 'adjectives', 'places'],
 				"PREMONITION" : ['subjects', 'verbs', 'adjectives', 'objects', 'prepositions', 'adjectives', 'places'],
-				"LUCKY NUMBERS" : ['numbers', 'numbers', 'numbers', 'numbers', 'numbers']
+				"LUCKY NUMBERS" : ['numbers', 'numbers', 'numbers', 'numbers', 'numbers'],
+				"FYI" : ['objects', 'prepositions', 'places'],
+				"INKLING" : ['subjects', 'verbs', 'objects'],
+				"FOREBODING" : ['subjects', 'verbs', 'prepositions', 'places'],
+				"PROGNOSTICATION" : ['subjects', 'verbs', 'adjectives', 'objects', 'prepositions', 'adjectives', 'places'],
+				"HEADS UP" : ['subjects', 'verbs', 'adjectives', 'objects']
 			};
 			searcher = window.searcher = {
 				searchForWord : function (text, wordToFind) {
