--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>WELCOME... TO THE DATACOMBS</title>
+		<title>DATACOMB</title>
 		<link href="css/style.css" type="text/css" rel="stylesheet">
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
 		<script type="text/javascript" language="javascript" src="datacomb.json"></script>
@@ -166,7 +166,7 @@
 
 		<div class="container">
 			<header class="header">
-				<h1>WELCOME... TO THE DATACOMBS</h1>
+				<h1>WELCOME . . . TO THE DATACOMB</h1>
 			</header>
 			<form class="form" id="form" method="post" action="">
 				<input type="file" class="upload" id="file" name="file">
